--- a/src/jdbc.properties
+++ b/src/jdbc.properties
@@ -1,4 +1,4 @@
-url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
+url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC&rewriteBatchedStatements=true
 user=root
 password=123456
 driver=com.mysql.jdbc.Driver
